[gd_scene load_steps=4 format=3 uid="uid://1a1tfikj02ec"]

[ext_resource type="Script" path="res://tides.gd" id="1_fone1"]

[sub_resource type="PlaceholderMesh" id="PlaceholderMesh_jdon3"]

[sub_resource type="MeshTexture" id="MeshTexture_8t8pm"]
mesh = SubResource("PlaceholderMesh_jdon3")

[node name="Tides" type="Node2D"]
script = ExtResource("1_fone1")

[node name="Timer" type="Timer" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 92.0
offset_top = 55.0
offset_right = 287.0
offset_bottom = 154.0
color = Color(1, 1, 1, 0.541176)

[node name="TidesThumb" type="TextureRect" parent="."]
offset_left = 94.0
offset_top = 57.0
offset_right = 285.0
offset_bottom = 152.0
expand_mode = 5

[node name="Button" type="Button" parent="TidesThumb"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 813.0
offset_bottom = 489.0
color = Color(0, 0, 0, 1)

[node name="TidesMaximized" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("MeshTexture_8t8pm")
expand_mode = 5
stretch_mode = 5

[node name="Button" type="Button" parent="CanvasLayer/TidesMaximized"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -1.0
offset_right = -2.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="TidesThumb/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/TidesMaximized/Button" to="." method="_on_close_button_pressed"]
